@@ -20,6 +20,7 @@ import cookielib
 import os
 import re
 import urllib, urllib2
+import xbmcgui
 
 class Ustvnow:
     __BASE_URL = 'http://lv2.ustvnow.com'
@@ -27,74 +28,77 @@ class Ustvnow:
         self.user = user
         self.password = password
         self.premium = premium
+        self.dlg = xbmcgui.Dialog()
         
     def get_channels(self, quality=1, stream_type='rtmp'):
-        self._login()
-        html = self._get_html('iphone_ajax', {'tab': 'iphone_playingnow', 
-                                              'token': self.token})
-        channels = []
-        for channel in re.finditer('class="panel".+?title="(.+?)".+?src="' +
-                                   '(.+?)".+?class="nowplaying_item">(.+?)' +
-                                   '<\/td>.+?class="nowplaying_itemdesc".+?' +
-                                   '<\/a>(.+?)<\/td>.+?href="(.+?)"',
-                                   html, re.DOTALL):
-            name, icon, title, plot, url = channel.groups()
-            #tmp work around till ustvnow stabilizes changes.
-            name = name.replace('\n','').replace('\t','').replace('\r','').replace('<fieldset> ','').replace('<div class=','').replace('>','').replace('"','').replace(' ','')
-            if not name:
-                name = ((icon.rsplit('/',1)[1]).replace('.png','')).upper()
-                name = name.replace('WLYH','CW').replace('WHTM','ABC').replace('WPMT','FOX').replace('WPSU','PBS').replace('WHP','CBS').replace('WGAL','NBC').replace('WHVLLD','MY9').replace('AETV','AE')
-                name = name.replace('APL','Animal Planet').replace('TOON','Cartoon Network').replace('DSC','Discovery').replace('BRAVO','Bravo').replace('USA','USA Network').replace('SYFY','Syfy').replace('HISTORY','History')
-                name = name.replace('COMEDY','Comedy Central').replace('FOOD','Food Network').replace('NIK','Nickelodeon').replace('LIFE','Lifetime').replace('SPIKETV','Spike').replace('FNC','Fox News').replace('NGC','National Geographic')
-            try:
-                if not url.startswith('http'):
-                    now = {'title': title, 'plot': plot.strip()}
-                    # if name == 'CW' or name == 'PBS' or name == 'MY9':
-                        # my_quality = quality
-                    # else: my_quality = quality+1
-                    url = '%s%s%d' % (stream_type, url[4:-1], quality + 1)
-                    aChannel = {'name': name, 'url': url, 
-                                'icon': icon, 'now': now}
-                                  
-                    if self.premium == False:
-                        if name not in ['CW','ABC','FOX','PBS','CBS','NBC','MY9']:
-                            raise  
-                            
-                    if aChannel in channels:
-                       print 'Duplicate channel found: %s' % (name)
-                    else:
-                       channels.append(aChannel)
-            except:
-                pass
+        if self._login():
+            html = self._get_html('iphone_ajax', {'tab': 'iphone_playingnow', 
+                                                  'token': self.token})
+            channels = []
+            achannels = []
+            for channel in re.finditer('class="panel".+?title="(.+?)".+?src="' +
+                                       '(.+?)".+?class="nowplaying_item">(.+?)' +
+                                       '<\/td>.+?class="nowplaying_itemdesc".+?' +
+                                       '<\/a>(.+?)<\/td>.+?href="(.+?)"',
+                                       html, re.DOTALL):
+                name, icon, title, plot, url = channel.groups()
+                #tmp work around till ustvnow stabilizes changes.
+                name = name.replace('\n','').replace('\t','').replace('\r','').replace('<fieldset> ','').replace('<div class=','').replace('>','').replace('"','').replace(' ','')
+                if not name:
+                    name = ((icon.rsplit('/',1)[1]).replace('.png','')).upper()
+                    name = name.replace('WLYH','CW').replace('WHTM','ABC').replace('WPMT','FOX').replace('WPSU','PBS').replace('WHP','CBS').replace('WGAL','NBC').replace('WHVLLD','MY9').replace('AETV','AE')
+                    name = name.replace('APL','Animal Planet').replace('TOON','Cartoon Network').replace('DSC','Discovery').replace('BRAVO','Bravo').replace('USA','USA Network').replace('SYFY','Syfy').replace('HISTORY','History')
+                    name = name.replace('COMEDY','Comedy Central').replace('FOOD','Food Network').replace('NIK','Nickelodeon').replace('LIFE','Lifetime').replace('SPIKETV','Spike').replace('FNC','Fox News').replace('NGC','National Geographic')
+                try:
+                    if not url.startswith('http'):
+                        now = {'title': title, 'plot': plot.strip()}
+                        url = '%s%s%d' % (stream_type, url[4:-1], quality + 1)
+                        aChannelname = {'name': name}
+                        aChannel = {'name': name, 'url': url, 
+                                    'icon': icon, 'now': now}
+                        
+                        if self.premium == False:
+                            if name not in ['CW','ABC','FOX','PBS','CBS','NBC','MY9']:
+                                raise  
+                                
+                        if aChannelname not in achannels:
+                           achannels.append(aChannelname)
+                           channels.append(aChannel)
+                except:
+                    pass
 
-        channels.sort()
-        return channels        
+            channels.sort()
+            return channels
+        else:
+            self.dlg.ok("USTVnow", "LOGIN FAILED!", "Please check your login credentials")
 
     def get_recordings(self, quality=1, stream_type='rtmp'):
-        self._login()
-        html = self._get_html('iphone_ajax', {'tab': 'iphone_viewdvrlist'})
-        recordings = []
-        for r in re.finditer('class="panel".+?title="(.+?)".+?src="(.+?)".+?' +
-                             'class="nowplaying_item">(.+?)<\/td>.+?(?:<\/a>' +
-                             '(.+?)<\/td>.+?)?vertical-align:bottom.+?">(.+?)' +
-                             '<\/div>.+?_self" href="(rtsp.+?)".+?href="(.+?)"', 
-                             html, re.DOTALL):
-            chan, icon, title, plot, rec_date, url, del_url = r.groups()
-            url = '%s%s%s' % (stream_type, url[4:-7], 
-                              ['350', '650', '950'][quality])
-            if plot:
-                plot = plot.strip()
-            else:
-                plot = ''
-            recordings.append({'channel': chan,
-                               'stream_url': url,
-                               'title': title,
-                               'plot': plot,
-                               'rec_date': rec_date.strip(),
-                               'icon': icon,
-                               'del_url': del_url
-                               })
-        return recordings
+        if self._login():
+            html = self._get_html('iphone_ajax', {'tab': 'iphone_viewdvrlist'})
+            recordings = []
+            for r in re.finditer('class="panel".+?title="(.+?)".+?src="(.+?)".+?' +
+                                 'class="nowplaying_item">(.+?)<\/td>.+?(?:<\/a>' +
+                                 '(.+?)<\/td>.+?)?vertical-align:bottom.+?">(.+?)' +
+                                 '<\/div>.+?_self" href="(rtsp.+?)".+?href="(.+?)"', 
+                                 html, re.DOTALL):
+                chan, icon, title, plot, rec_date, url, del_url = r.groups()
+                url = '%s%s%s' % (stream_type, url[4:-7], 
+                                  ['350', '650', '950'][quality])
+                if plot:
+                    plot = plot.strip()
+                else:
+                    plot = ''
+                recordings.append({'channel': chan,
+                                   'stream_url': url,
+                                   'title': title,
+                                   'plot': plot,
+                                   'rec_date': rec_date.strip(),
+                                   'icon': icon,
+                                   'del_url': del_url
+                                   })
+            return recordings
+        else:
+            self.dlg.ok("USTVnow", "LOGIN FAILED!", "Please check your login credentials")
     
     def delete_recording(self, del_url):
         html = self._get_html(del_url)
@@ -124,13 +128,11 @@ class Ustvnow:
     def _get_html(self, path, queries={}):
         html = False
         url = self._build_url(path, queries)
-
         response = self._fetch(url)
         if response:
             html = response.read()
         else:
             html = False
-        
         return html
 
     def _login(self):
@@ -138,14 +140,13 @@ class Ustvnow:
         self.token = None
         self.cj = cookielib.CookieJar()
         opener = urllib2.build_opener(urllib2.HTTPCookieProcessor(self.cj))
-        
         urllib2.install_opener(opener)
         url = self._build_url('iphone_login', {'username': self.user, 
                                                'password': self.password})
         response = self._fetch(url)
-        #response = opener.open(url)
-        
         for cookie in self.cj:
             # print '%s: %s' % (cookie.name, cookie.value)
             if cookie.name == 'token':
                 self.token = cookie.value
+                return True
+        return False
