@@ -1,4 +1,8 @@
 [B]Version 12.0.2[/B]
+- Added Login verification
+- Added Feedback Prompts 
+
+[B]Version 12.0.2[/B]
 - Force Low quality for non Premium
 - Internal url listitem routing changed from rtmp to static references.
 
